--- a/20250212.md
+++ b/20250212.md
@@ -1,7 +1,7 @@
 # 2025/02/13
 
 ## Ninja Code　初級1~5
-- 初級1　自分のPCにローカルリポジトリを作成する
+- 初級1　自分のPCにローカルリポジトリを作成する.
   -gitコマンドは git init である．
   -ローカルリポジトリは自分自身の保管場所
 - 初級2
